--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -9,6 +9,7 @@
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quidem officia aliquid fuga voluptatum rem, sit inventore illum rerum consequuntur alias porro quas vel error asperiores voluptatibus quasi aliquam ad.
   </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ea sequi ab quam veritatis officiis debitis omnis dolor quas eius repellat inventore hic beatae corrupti libero enim, assumenda consequuntur itaque!</p>
   <p>
     Take a look at the <code>pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
